<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.okifirsyah.storynote.presentation.view.sign_in.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signInFragment_to_signUpFragment"
            app:destination="@id/signUpFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/signInFragment"
            app:popUpToInclusive="true"
            app:popUpToSaveState="true"
            app:restoreState="true" />
        <action
            android:id="@+id/action_signInFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/main_navigation" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.okifirsyah.storynote.presentation.view.sign_up.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUpFragment_to_successFragment"
            app:destination="@id/successFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/signInFragment"
            app:popUpToInclusive="true"
            app:popUpToSaveState="true"
            app:restoreState="true" />
        <action
            android:id="@+id/action_signUpFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/signUpFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/successFragment"
        android:name="com.okifirsyah.storynote.presentation.view.success.SuccessFragment"
        android:label="fragment_success"
        tools:layout="@layout/fragment_success">
        <action
            android:id="@+id/action_successFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:launchSingleTop="true"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.okifirsyah.storynote.presentation.view.dashboard.DashboardFragment"
        android:label="fragment_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboardFragment_to_settingFragment"
            app:destination="@id/settingFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_detailStoryFragment"
            app:destination="@id/detailStoryFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_addStoryFragment"
            app:destination="@id/addStoryFragment" />
        <action
            android:id="@+id/action_dashboardFragment_to_storyMapsFragment"
            app:destination="@id/storyMapsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingFragment"
        android:name="com.okifirsyah.storynote.presentation.view.setting.SettingFragment"
        android:label="fragment_setting"
        tools:layout="@layout/fragment_setting">
        <action
            android:id="@+id/action_settingFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.okifirsyah.storynote.presentation.view.splash.SplashFragment"
        android:label="fragment_splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splashFragment_to_signInFragment"
            app:destination="@id/signInFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splashFragment_to_dashboardFragment"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/detailStoryFragment"
        android:name="com.okifirsyah.storynote.presentation.view.detail_story.DetailStoryFragment"
        android:label="fragment_detail_story"
        tools:layout="@layout/fragment_detail_story">
        <argument
            android:name="storyId"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/addStoryFragment"
        android:name="com.okifirsyah.storynote.presentation.view.add_story.AddStoryFragment"
        android:label="fragment_add_story"
        tools:layout="@layout/fragment_add_story" />
    <fragment
        android:id="@+id/storyMapsFragment"
        android:name="com.okifirsyah.storynote.presentation.view.maps.StoryMapsFragment"
        android:label="fragment_story_maps"
        tools:layout="@layout/fragment_story_maps" />
</navigation>