<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.sign_in.SignInFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/logo_dimen"
            android:layout_height="@dimen/logo_dimen"
            android:contentDescription="@string/logo"
            android:src="@drawable/storynote" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Theme.StoryNote.Text.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:text="@string/login" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.textview.MaterialTextView
            style="@style/Theme.StoryNote.Text.LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:text="@string/email" />

        <com.okifirsyah.customview.textinput.MainEditText
            android:id="@+id/ed_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:inputType="textEmailAddress"
            android:textAppearance="@style/Theme.StoryNote.Text.BodyMedium"
            app:borderRadius="100dp"
            app:focusOutlineColor="@color/primary_50"
            app:outlineColor="?attr/customEditTextBorderColor"
            app:prefixIcon="@drawable/ic_email" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Theme.StoryNote.Text.LabelMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_4dp"
            android:text="@string/password" />

        <com.okifirsyah.customview.textinput.MainPasswordEditText
            android:id="@+id/ed_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/Theme.StoryNote.Text.BodyMedium"
            app:borderRadius="100dp"
            app:focusOutlineColor="@color/primary_50"
            app:onPasswordHideIcon="@drawable/ic_visibility_off"
            app:onPasswordShowIcon="@drawable/ic_visibility"
            app:outlineColor="?attr/customEditTextBorderColor"
            app:prefixIcon="@drawable/ic_lock" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/Theme.StoryNote.FilledButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/dimen_8dp"
            android:text="@string/login"
            android:textAllCaps="false" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/Theme.StoryNote.Text.BodyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/dimen_4dp"
            android:gravity="center"
            android:text="@string/not_have_account_yet" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            style="@style/Theme.StoryNote.OutlinedButtonTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_8dp"
            android:text="@string/register_account_now"
            android:textColorHint="@color/primary_50" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>