...

        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_sign_out"
        style="@style/Theme.StoryNote.FilledButtonTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginBottom="@dimen/dimen_16dp"
...
